Fixed sizing, alignment of budget form modal

--- a/web-app/css/custom.css
+++ b/web-app/css/custom.css
@@ -6,3 +6,13 @@ a:hover {
 .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #D6FAFF;
 }
+
+.modal-header	{
+	padding-bottom: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-dialog {
+    width: 400px;
+    margin: 30px auto;
+  }
